--- a/metric/liveview/pom.xml
+++ b/metric/liveview/pom.xml
@@ -16,36 +16,35 @@
 
   <properties>
 	<liveview.version>1.0.0</liveview.version>
-	<sb.home>C:/dev_env/tsi-root/tibco/str/11.0.1/V3-GA/win/x86_64</sb.home>
+	<sb.home>/path/to/sb/home</sb.home>
   </properties>
 
   <dependencies>
-	<dependency>
-		<groupId>com.tibco.str</groupId>
-		<artifactId>sbclient</artifactId>
-		<version>${be.version}</version>
-		<scope>system</scope>
-		<systemPath>${sb.home}/lib/sbclient.jar</systemPath>
-	</dependency>
-	<dependency>
-		<groupId>com.tibco.str</groupId>
-		<artifactId>lv-client</artifactId>
-		<version>${be.version}</version>
-		<scope>system</scope>
-		<systemPath>${sb.home}/lib/lv-client.jar</systemPath>
-	</dependency>
-	<dependency>
+    <dependency>
+        <groupId>com.tibco.str</groupId>
+        <artifactId>sbclient</artifactId>
+        <version>${be.version}</version>
+        <scope>system</scope>
+        <systemPath>${sb.home}/lib/sbclient.jar</systemPath>
+    </dependency>
+    <dependency>
+        <groupId>com.tibco.str</groupId>
+        <artifactId>lv-client</artifactId>
+        <version>${be.version}</version>
+        <scope>system</scope>
+        <systemPath>${sb.home}/lib/lv-client.jar</systemPath>
+    </dependency>
+    <dependency>
         <groupId>com.tibco.businessevents</groupId>
         <artifactId>cep-kernel</artifactId>
     </dependency>
-	<dependency>
+    <dependency>
         <groupId>com.tibco.businessevents</groupId>
         <artifactId>cep-common</artifactId>
     </dependency>
-	<dependency>
+    <dependency>
         <groupId>com.tibco.businessevents</groupId>
         <artifactId>cep-base</artifactId>
     </dependency>
   </dependencies>
-
 </project>
