--- a/catalog/aws-catalog-fn/pom.xml
+++ b/catalog/aws-catalog-fn/pom.xml
@@ -4,6 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <repositories>
+        <repository>
+            <id>shibboleth-repo</id>
+            <url>https://build.shibboleth.net/nexus/content/repositories/releases/</url>
+        </repository>
+    </repositories>
+
     <!-- parent pom -->
     <parent>
         <groupId>com.tibco.businessevents</groupId>
@@ -163,18 +170,8 @@
             <artifactId>tpcl-antlr</artifactId>
             <version>${be.version}</version>
             <scope>system</scope>
-            <systemPath>${be.home}/lib/ext/tpcl/antlr.jar</systemPath>
+            <systemPath>${be.home}/lib/ext/tpcl/antlr-complete.jar</systemPath>
         </dependency>
-
-<!--        <dependency>-->
-<!--            <groupId>com.tibco.businessevents</groupId>-->
-<!--            <artifactId>cep-ui-rt-common</artifactId>-->
-<!--        </dependency>-->
-
-<!--        <dependency>-->
-<!--        <groupId>com.tibco.businessevents</groupId>-->
-<!--        <artifactId>be-functions</artifactId>-->
-<!--        </dependency>-->
 
         <dependency>
             <groupId>com.tibco.businessevents</groupId>
@@ -184,40 +181,33 @@
             <systemPath>${be.home}/lib/be-studiofunctions.jar</systemPath>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>com.tibco.businessevents</groupId>-->
-<!--            <artifactId>be-functions</artifactId>-->
-<!--            <version>${be.version}</version>-->
-<!--            <scope>system</scope>-->
-<!--            <systemPath>${be.home}/lib/be-functions.jar</systemPath>-->
-<!--        </dependency>-->
-
-        <!-- Test dependencies -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
+            <version>${testcontainer.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>junit-jupiter</artifactId>
+            <version>${testcontainer.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>localstack</artifactId>
-            <version>1.15.1</version>
+            <version>${testcontainer.version}</version>
             <scope>test</scope>
         </dependency>
 
         <!-- AWS dependencies -->
-
 
         <dependency>
             <groupId>com.amazonaws</groupId>
@@ -263,15 +253,18 @@
             <version>1.15.3</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.opensaml/opensaml -->
         <dependency>
             <groupId>org.opensaml</groupId>
             <artifactId>opensaml</artifactId>
-            <version>2.6.5</version>
+            <version>2.6.4</version>
         </dependency>
-
-
-
+        
+        <dependency>
+            <groupId>org.opensaml</groupId>
+            <artifactId>xmltooling</artifactId>
+            <version>1.4.6</version>
+        </dependency>
+        
         <!-- https://mvnrepository.com/artifact/javax.xml.bind/jaxb-api -->
         <dependency>
             <groupId>javax.xml.bind</groupId>
