--- a/channel/aws-sqs/pom.xml
+++ b/channel/aws-sqs/pom.xml
@@ -148,6 +148,17 @@
             <groupId>com.tibco.businessevents</groupId>
             <artifactId>cep-external-emf-ecore-xmi</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.tibco.businessevents</groupId>
+            <artifactId>api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.tibco.businessevents</groupId>
+            <artifactId>bridgekit</artifactId>
+            <version>${be.version}</version>
+            <scope>system</scope>
+            <systemPath>${be.home}/lib/ext/tibco/org.genxdm.bridgekit.jar</systemPath>
+        </dependency>
 
         <!-- Other common dependencies -->
         <dependency>
@@ -175,27 +186,11 @@
             <artifactId>mockito-junit-jupiter</artifactId>
         </dependency>
 
-        <!-- AWS-SQS Channel dependencies -->
-	    
-        <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/sqs -->
-<!--        <dependency>-->
-<!--            <groupId>software.amazon.awssdk</groupId>-->
-<!--            <artifactId>sqs</artifactId>-->
-<!--            <version>2.15.47</version>-->
-<!--        </dependency>-->
-
-        <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/sts -->
-<!--        <dependency>-->
-<!--            <groupId>software.amazon.awssdk</groupId>-->
-<!--            <artifactId>sts</artifactId>-->
-<!--            <version>2.15.45</version>-->
-<!--        </dependency>-->
-
         <!-- https://mvnrepository.com/artifact/org.opensaml/opensaml -->
         <dependency>
             <groupId>org.opensaml</groupId>
             <artifactId>opensaml</artifactId>
-            <version>2.6.5</version>
+            <version>2.6.4</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
@@ -211,15 +206,7 @@
             <artifactId>jaxb-api</artifactId>
             <version>2.3.1</version>
         </dependency>
-
-<!--        <dependency>-->
-<!--            <groupId>software.amazon.awssdk</groupId>-->
-<!--            <artifactId>bom</artifactId>-->
-<!--            <version>2.15.15</version>-->
-<!--            <type>pom</type>-->
-<!--            <scope>import</scope>-->
-<!--        </dependency>-->
-
+        
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>localstack</artifactId>
