--- a/channel/kinesis/pom.xml
+++ b/channel/kinesis/pom.xml
@@ -13,6 +13,7 @@
 	<name>kinesis</name>
 	<properties>
 		<kinesis-version>1.14.4</kinesis-version>
+		<kinesis-sdk-version>1.12.538</kinesis-sdk-version>
 	</properties>
 	<build>
 		<plugins>
@@ -104,6 +105,21 @@
 			<groupId>com.amazonaws</groupId>
 			<artifactId>amazon-kinesis-client</artifactId>
 			<version>${kinesis-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-sts</artifactId>
+			<version>${kinesis-sdk-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-core</artifactId>
+			<version>${kinesis-sdk-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-kinesis</artifactId>
+			<version>${kinesis-sdk-version}</version>
 		</dependency>
 	</dependencies>
 </project>
