--- a/metric/elasticsearch/pom.xml
+++ b/metric/elasticsearch/pom.xml
@@ -54,7 +54,7 @@
 	<dependency>
 		<groupId>org.testcontainers</groupId>
 		<artifactId>elasticsearch</artifactId>
-		<version>${testcontainer.verion}</version>
+		<version>${testcontainer.version}</version>
 		<scope>test</scope>
 	</dependency>
 	<dependency>
