--- a/store/mongoDB/pom.xml
+++ b/store/mongoDB/pom.xml
@@ -2,15 +2,18 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>com.tibco.businessevents</groupId>
     <artifactId>store</artifactId>
     <version>1.0</version>
   </parent>
+
   <artifactId>mongoDB</artifactId>
   <version>1.0.0</version>
   <name>mongoDB</name>
   <url>http://maven.apache.org</url>
+
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
@@ -94,7 +97,7 @@
 			<artifactId>tpcl-antlr</artifactId>
 			<version>${be.version}</version>
 			<scope>system</scope>
-			<systemPath>${be.home}/lib/ext/tpcl/antlr.jar</systemPath>
+			<systemPath>${be.home}/lib/ext/tpcl/antlr-complete.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
