BE-34449 : Custom FTL Serializer for FTL Channel

--- a/catalog/pom.xml
+++ b/catalog/pom.xml
@@ -25,6 +25,7 @@
     <modules>
        <module>aws-catalog-fn</module>
        <module>cassandra-catalog-fn</module>
+       <module>ftl-catalog-fn</module>
        <module>analytics-catalog-fn</module>
     </modules>
     
